myapp/static/css/styles.css
/* ... */
.user-info {
    display: flex;
    align-items: center;
}

.user-icon {
    width: 40px;
    height: 40px;
    border-radius: 50%;
    margin-right: 10px;
}

.user-initial {
    width: 40px;
    height: 40px;
    border-radius: 50%;
    background-color: #ccc;
    color: white;
    display: flex;
    align-items: center;
    justify-content: center;
    margin-right: 10px;
    font-size: 18px;
    font-weight: bold;
}

.user-name {
    font-size: 16px;
    font-weight: bold;
}

.tags {
    display: flex;
    align-items: center;
}

.tag {
    background-color: #e7e7e7;
    color: #333;
    padding: 5px 10px;
    border-radius: 5px;
    margin-left: 5px;
    font-size: 12px;
}

.post-container {
    display: flex;
    align-items: center;
    justify-content: space-between;
    border-bottom: 1px solid #ddd;
    padding: 10px 0;
    margin-bottom: 20px;
}


.bookmark-icon {
    width: 19px;  /* Adjust size as needed */
    height: 19px;  /* Adjust size as needed */
    cursor: pointer;
    float: right;

}

#loading {
    text-align: center;
    padding: 20px;
}

#loading img {
    width: 50px;
    height: 50px;
}


/* Profile picture styling */
.profile-picture {
    width: 150px;
    height: 150px;
    margin: 0 auto;
    overflow: hidden;
    border-radius: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #f0f0f0;
}

.profile-pic {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

/*footer*/

.footer {
    background-color: #f8f9fa;
    padding: 20px 0;
    text-align: center;
    font-family: 'Inter', sans-serif;
    border-top: 1px solid #e7e7e7;
}

.footer-links {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
}

.footer-links a {
    margin: 0 10px;
    color: #6c757d;
    text-decoration: none;
    font-size: 14px;
}

.footer-links a:hover {
    color: #343a40;
}

/* Username styling */
.username {
    font-size: 2rem;
    font-weight: bold;
    margin-left: 43%;
}

/* Edit Profile button styling */
.btn-edit-profile {
    color: white;
    padding: 0.5rem 1rem;
    border: none;
    align-self: flex-end;
    border-radius: 30px;
    background-color: #33691E;
    margin-top: auto;
    font-size: 1rem;
    transition: background-color 0.3s ease;
    position: absolute;
    right: 15px;
    top: 15px;
}

.btn-edit-profile:hover {
    background-color: #33691E;
    color: white;
}

.profile-page-button {
    align-self: flex-end;
    border-radius: 30px;
    background-color: #33691E;
    border: none;
    margin-top: auto;
}

/* Nav tabs styling */
.nav-tabs {
    border-bottom: none;
    justify-content: center;
    margin-top: 20px;
}

.nav-tabs .nav-link {
    border: none;
    color: #000000;
    font-weight: bold;
    font-size: 1.1rem;
}

.nav-tabs .nav-link.active {
    border-bottom: 2px solid #000000;
    color: #000000;
}

/* Card styling */
.card {
    border: none;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    border-radius: 10px;
    position: relative;
}

.card-title {
    font-size: 1.25rem;
}

.card-text {
    font-size: 1rem;
}

/* General text alignment */
.text-center h3, .text-center h4 {
    margin-top: 20px;
}

.text-center ul {
    padding-left: 0;
}

/* About section */
.about-section {
    margin-top: 20px;
}

.about-section h3 {
    font-size: 1.8rem;
    margin-bottom: 15px;
}

.about-section p {
    line-height: 1.6;
    margin-bottom: 10px;
}

.about-section h4 {
    font-size: 1.4rem;
    margin-top: 20px;
    margin-bottom: 10px;
}

.details-list {
    list-style: none;
    padding-left: 0;
}

.details-list li {
    margin-bottom: 5px;
}

.form-group label {
        font-weight: bold;
    }
    .form-control {
        margin-top: 0.5rem;
    }
    .btn-primary {
        background-color: #33691E;
        border-radius: 30px;
        border: none;
    }
    .btn-secondary {
        background-color: #6c757d;
        border-radius: 30px;
        border: none;
    }
    .card-title {
        font-size: 1.5rem;
        margin-bottom: 1rem;
    }
    .rounded-circle {
        display: block;
        margin: 0 auto;
    }

/*.tell-section {*/
/*    background-color: #f8f9fa;*/
/*    padding: 20px;*/
/*    border-radius: 8px;*/
/*}*/

/*.tell-section h4 {*/
/*    font-size: 1.5rem;*/
/*    margin-bottom: 10px;*/
/*}*/

/*.tell-section p {*/
/*    line-height: 1.6;*/
/*    margin-bottom: 15px;*/
/*}*/

/*#editBioForm {*/
/*    margin-top: 10px;*/
/*}*/

/*#editBioForm textarea {*/
/*    width: 100%;*/
/*    resize: vertical;*/
/*}*/

/*#editBioForm .btn {*/
/*    margin-top: 10px;*/
/*}*/

/* Responsive adjustments */
@media (max-width: 768px) {
    .container {
        padding: 0 15px;
    }

    .profile-picture {
        width: 120px;
        height: 120px;
    }

    .nav-tabs .nav-link {
        font-size: 1rem;
    }

    .btn-edit-profile {
        font-size: 0.875rem;
        padding: 0.4rem 0.8rem;
    }

    /*.tell-section {*/
    /*    padding: 15px;*/
    /*}*/

    /*.tell-section h4 {*/
    /*    font-size: 1.3rem;*/
    /*}*/

    /*.tell-section p {*/
    /*    font-size: 0.9rem;*/
    /*}*/
}

@media (max-width: 400px) {
    .profile-picture {
        width: 100px;
        height: 100px;
    }

    .profile-pic {
        width: 100%;
        height: 100%;
        object-fit: cover;
    }

    .card-title {
        font-size: 1rem;
    }

    .card-text {
        font-size: 0.875rem;
    }

    .nav-tabs .nav-link {
        font-size: 0.875rem;
    }

    .btn-edit-profile {
        font-size: 0.75rem;
        padding: 0.3rem 0.6rem;
    }
}
/*end of  profile picture css*/

/*start of base.html search box css*/
.search-container {
    position: relative;
}
/* ... */

